--- a/styles/website.css
+++ b/styles/website.css
@@ -69,6 +69,17 @@ span.psw {
     width: 100%;
   }
 } 
+textarea {
+  width: 100%;
+  height: 150px;
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  font-size: 16px;
+  resize: none;
+}
 /* gleria eleje */
 div.gallery {
   border: 1px solid #ccc;
