--- a/styles/website.css
+++ b/styles/website.css
@@ -1,3 +1,10 @@
+/* p főoldal */
+p {
+  padding: 14px 20px;
+  text-align: left;
+  float: left;
+
+}
 /* Bordered form */
 form {
   border: 3px solid #f1f1f1;
@@ -80,13 +87,32 @@ textarea {
   font-size: 16px;
   resize: none;
 }
+/*saját szerkesztések*/
+header {
+border-radius: 10px;
+background-color: #04AA6D; 
+padding: 10px;
+margin: 10px;
+}
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {background-color: #f2f2f2;}
+/* tábla vege*/
 /* gleria eleje */
 div.gallery {
-  border: 1px solid #ccc;
+  border: 1px solid #04AA6D;
 }
 
 div.gallery:hover {
-  border: 1px solid #777;
+  border: 20px solid #04AA6D;
 }
 
 div.gallery img {
@@ -128,3 +154,54 @@ div.desc {
   clear: both;
 }
 /*gallerya vege*/
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+/* menu vege */
