--- a/styles/stilus.css
+++ b/styles/stilus.css
@@ -249,6 +249,7 @@ header {
     margin: 20px 0;
     border-radius: 5px;
     max-height: 150px;
+    max-width: 150px;
     overflow-y: auto;
     background: white;
 }
