ujrakezdes II css javitások II

--- a/styles/stilus.css
+++ b/styles/stilus.css
@@ -29,7 +29,7 @@ footer {
 }
 
 h2 {
-    color: #2c3e50;
+    color: #00979D;
     border-bottom: 2px solid #eee;
     padding-bottom: 5px;
     margin-top: 30px;
