--- a/styles/stilus.css
+++ b/styles/stilus.css
@@ -35,6 +35,23 @@ h2 {
     margin-top: 30px;
     text-align: center;
 }
+textarea {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+input {
+    background: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.3s;
+}
+
+
 /* MENÜ */
 #nav {
     background: #34495e;
