--- a/styles/stilus.css
+++ b/styles/stilus.css
@@ -40,7 +40,7 @@ textarea {
     margin-left: auto;
     margin-right: auto;
 }
-input {
+/*input {
     background: #3498db;
     color: white;
     border: none;
@@ -49,7 +49,7 @@ input {
     cursor: pointer;
     font-size: 16px;
     transition: background 0.3s;
-}
+}*/
 
 
 /* MENÜ */
@@ -178,6 +178,7 @@ input {
     border: 1px solid #ddd;
     margin: 20px 0;
     align-items: center;
+    text-align: center;
 }
 
 .contact-form textarea {
@@ -189,6 +190,16 @@ input {
     align-items: center;
 }
 
+.contact-form input {
+    background: #3498db;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background 0.3s;
+}
 /* RESZPONZÍV */
 @media (max-width: 768px) {
     header {
